--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!--more than software-->
         <div class="mtsLeft">
             <span class="mtsHeading"><i class="fa-solid fa-users fa-2x"></i><br>Not just software</span>
-            <span class="mtsText">PirateGrabber is <span class="emphasis">more</span> than a Python file. It's a rapidly growing community of <span class="emphasis">hundreds</span> of users passionate about beaming</span>
+            <span class="mtsText">AmcTool is <span class="emphasis">more</span> than a Python file. It's a rapidly growing community of <span class="emphasis">hundreds</span> of users passionate about beaming</span>
         </div>
         <div class="mtsRight">
             <img src="mts.png">
